commit all design

--- a/docs/assets/plugins/fontawesome-free/css/all.css
+++ b/docs/assets/plugins/fontawesome-free/css/all.css
@@ -3756,7 +3756,7 @@ readers do not read off random characters that represent icons */
 .fa-stethoscope:before {
   content: "\f0f1"; }
 
-.fa-sticker-mule:before {
+.fa-it-mule:before {
   content: "\f3f7"; }
 
 .fa-sticky-note:before {
