Added ChartJS and Demo report

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
 <h1>Dashboard</h1>
+<canvas baseChart 
+        [data]="salesData" 
+        [type]="'bar'"
+        [options]="chartOptions"
+      >
+</canvas>
