--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -1,46 +1,19 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-
     <a href="index3.html" class="brand-link">
       <img src="../../assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
         style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
-
     <div class="sidebar">
-
-
-
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-
-          <li class="nav-item menu-open">
-            <a href="#" class="nav-link active">
+          <li class="nav-item">
+            <a href="#/" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
-                <i class="right fas fa-angle-left"></i>
               </p>
             </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v1</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v2</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="./index3.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v3</p>
-                </a>
-              </li>
-            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link">
@@ -64,7 +37,6 @@
                   <img src="../../assets/icons/group.png" class="side_img">
                   <p>
                     Employee Master
-
                   </p>
                 </a>
               </li>
@@ -81,7 +53,6 @@
                   <img src="../../assets/icons/traffic-data.png" class="side_img">
                   <p>
                     Audit Area
-
                   </p>
                 </a>
               </li>
@@ -90,12 +61,9 @@
                   <img src="../../assets/icons/gdpr.png" class="side_img">
                   <p>
                     Regulation Setup
-
                   </p>
                 </a>
               </li>
-
-
             </ul>
           </li>
           <li class="nav-item">
@@ -112,7 +80,6 @@
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Create Plan
-
                   </p>
                 </a>
               </li>
@@ -121,7 +88,6 @@
                   <img src="../../assets/icons/view.png" class="side_img">
                   <p>
                     View Plan
-
                   </p>
                 </a>
               </li>
@@ -130,12 +96,9 @@
                   <img src="../../assets/icons/planning.png" class="side_img">
                   <p>
                     Pending Plan
-
                   </p>
                 </a>
               </li>
-
-
             </ul>
           </li>
           <li class="nav-item">
@@ -146,7 +109,6 @@
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
-
           </li>
           <li class="nav-item">
             <a href="#/" class="nav-link">
@@ -157,10 +119,7 @@
               </p>
             </a>
           </li>
-  
         </ul>
       </nav>
-
     </div>
-
   </aside>
