--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -111,13 +111,23 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#/" class="nav-link">
+            <a class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Reports
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a routerLink="/report/anual-audit" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Annual Audit Status 
+                  </p>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </nav>
