--- a/src/app/dashboard/masters/categories/categories-list/categories-list.component.html
+++ b/src/app/dashboard/masters/categories/categories-list/categories-list.component.html
@@ -1,16 +1,14 @@
 <section class="content">
     <div class="container-fluid">
-  
-      <div class="row" *ngIf="Category==true">
+      <div class="row">
         <div class="col-12">
           <div class="card">
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Categories Details</h3>
-                <a href="" (click)="AddCategory()" class="btn btn-blue"> <img src="../../../../../assets/icons/admin.png" class="side_imgmaster mr-1">Add Categories</a>
+                <a (click)="addCategory()" class="btn btn-blue"> <img src="../../../../../assets/icons/admin.png" class="side_imgmaster mr-1">Add Categories</a>
               </div>
             </div>
-            <!-- /.card-header -->
             <div class="card-body">
               <div class="table-responsive">
                 <table id="example2" class="table table-bordered table-hover">
@@ -20,8 +18,6 @@
                       <th>Category Code </th>
                       <th>Category Name</th>
                       <th>Action</th>
-  
-  
                     </tr>
                   </thead>
                   <tbody>
@@ -32,29 +28,20 @@
                         Regulation for
                         initial production control
                       </td>
-  
-  
-  
-  
                       <td>
                         <div class="d-flex">
-                          <a (click)="AddCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
+                          <a (click)="addCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
                           <a><img src="../../../../../assets/icons/delete.png" class="w_25"></a>
                         </div>
                       </td>
                     </tr>
-  
                     <tr>
                       <td>1</td>
                       <td>CH1234</td>
                       <td>Production preparation</td>
-  
-  
-  
-  
                       <td>
                         <div class="d-flex">
-                          <a (click)="AddCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
+                          <a (click)="addCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
                           <a><img src="../../../../../assets/icons/delete.png" class="w_25"></a>
                         </div>
                       </td>
@@ -63,13 +50,9 @@
                       <td>1</td>
                       <td>CH1234</td>
                       <td>Changing management</td>
-  
-  
-  
-  
                       <td>
                         <div class="d-flex">
-                          <a (click)="AddCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
+                          <a (click)="addCategory()"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
                           <a><img src="../../../../../assets/icons/delete.png" class="w_25"></a>
                         </div>
                       </td>
@@ -95,58 +78,8 @@
                 </ul>
               </nav>
             </div>
-              <!-- /.card-body -->
             </div>
-          <!-- /.card -->
-          <!-- /.card -->
-        </div>
-        <!-- /.col -->
-      </div>
-      <div class="row" *ngIf="CategoryDetails==true">
-        <div class="col-md-12">
-  
-          <div class="card card-default">
-            <div class="card-header">
-              <h3 class="card-title"> Category Details</h3>
-            </div>
-  
-  
-            <form>
-              <div class="card-body">
-  
-                <div class="row">
-                  <div class="col-sm-4">
-  
-  
-                    <div class="form-group">
-                      <label class="form_label">Category Name</label>
-                      <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                             placeholder="Enter Categories Name" maxlength="200">
-                    </div>
-  
-                  </div>
-  
-                 
-  
-  
-  
-                </div>
-  
-  
-              </div>
-  
-              <div class="card-footer">
-                <button (click)="Save()" class="btn btn-primary">Save</button>
-                <button (click)="Close()" class="btn btn-default">Close</button>
-              </div>
-            </form>
-          </div>
-  
-  
         </div>
       </div>
-  
-  
-  
     </div>
   </section>
