--- a/src/app/dashboard/reports/anual-audit/anual-audit.component.html
+++ b/src/app/dashboard/reports/anual-audit/anual-audit.component.html
@@ -1,6 +1,48 @@
-<canvas baseChart 
-        [data]="salesData" 
-        [type]="'bar'"
-        [options]="chartOptions"
-      >
-</canvas>
+<section class="content p-3">
+    <div class="row">
+        <div class="col-md-12 p-0">
+            <div class="card card-default">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-3 offset-md-9">
+                            <div class="form-group">
+                                <label class="form_label">Filter</label>
+                                <select class="form-control" name="filter" [(ngModel)]="selectedFilter"
+                                    (change)='onFilterSelected()'>
+                                    <option value="month">Month</option>
+                                    <option value="year">Year</option>
+                                    <option value="location">Location</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <canvas baseChart [data]="salesData" [type]="'bar'" [options]="chartOptions">
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 p-0">
+            <div class="card card-default">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <canvas baseChart [data]="monthAuditData" [type]="'bar'" [options]="monthChartOptions">
+                            </canvas>
+                        </div>
+                        <div class="col-md-4">
+                            <canvas baseChart [data]="pieChartData" [type]="'pie'"
+                                [options]="pieChartOptions">
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
