--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -127,6 +127,62 @@
                   </p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a routerLink="/report/dist-status" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Distribution Status
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/vendor-dist-status" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor Distribution Status
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/vsa-status" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    VSA Status
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/vsa-trend" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    VSA Trend
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/action-plan-vendor" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Action Plan Vendor Wise
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/action-plan-observation" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Action Plan Observation Wise
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/average-defect" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Average Defect Vs VSA Score
+                  </p>
+                </a>
+              </li>
             </ul>
           </li>
         </ul>
